codex-rs/tui/src/snapshots/codex_tui__resume_picker__tests__resume_picker_db_fallback_transition.snap
---
source: tui/src/resume_picker.rs
expression: "format!(\"---- loading fallback ----\\n{loading_snapshot}\\n---- repaired results ----\\n{repaired_snapshot}\")"
---
---- loading fallback ----
Loading sessions…
---- repaired results ----
❯ 1d ago      <1m     unknown cwd     gpt-5:medium                        fi...

  1d ago      <1m     unknown cwd     gpt-5:medium                        re...

  1d ago      <1m     unknown cwd     gpt-5:medium                        th...
