codex-rs/tui/src/snapshots/codex_tui__resume_picker__tests__resume_picker_dense_all.snap
---
source: tui/src/resume_picker.rs
expression: "render_dense_row_snapshot(true, None, 120,)"
---
❯ 15m ago     1h 15m  codex-rs        grok-4.6:high                       Propose session picker redesign with enoug...
                                                                          title text to exercise truncation
