codex-rs/tui/src/snapshots/codex_tui__resume_picker__tests__resume_picker_dense_all_auto_hidden_cwd.snap
---
source: tui/src/resume_picker.rs
expression: "render_dense_row_snapshot(true, None, 100,)"
---
❯ 15m ago     1h 15m  codex-rs        grok-4.6:high                       Propose session picker...
                                                                          redesign with enough
                                                                          title text to exercise…
