codex-rs/tui/src/snapshots/codex_tui__resume_picker__tests__resume_picker_dense_cwd.snap
---
source: tui/src/resume_picker.rs
expression: "render_dense_row_snapshot(false,\nSome(PathBuf::from(\"/Users/felipe.coury/code/codex.fcoury-session-picker/codex-rs\")),\n100,)"
---
❯ 15m ago     codex-rs        openai / gpt-5 · medium             1h 15m  Propose session picker...
                                                                          redesign with enough
                                                                          title text to exercise…
