codex-rs/tui/src/snapshots/codex_tui__resume_picker__tests__resume_picker_dense_narrow.snap
---
source: tui/src/resume_picker.rs
expression: "render_dense_row_snapshot(true, None, 48,)"
---
❯ 15m ago   co... openai / gpt... 1h... Prop...
                                        session
                                        picker…
