codex-rs/tui/src/snapshots/codex_tui__resume_picker__tests__resume_picker_dense_selected_title_overlay.snap
---
source: tui/src/resume_picker.rs
expression: terminal.backend().to_string()
---
❯ 15m ago     1h 15m  codex-rs        grok-4.6:high                       Se...
  15m ago     1h 15m  later           grok-4.6:high                       ed
  15m ago     1h 15m  later           grok-4.6:high                       ti...
