codex-rs/tui/src/snapshots/codex_tui__resume_picker__tests__resume_picker_expanded_session.snap
---
source: tui/src/resume_picker.rs
expression: rendered
---
⌄ 15m ago     1h 15m  codex           gpt-5:medium                        Investigate ...
  │ Session:    019dabc1-0ef5-7431-b81c-03037f51f62c
  │ Created:    1 hour ago · 2026-04-28 16:30:00
  │ Updated:    15 minutes ago · 2026-04-28 17:45:00
  │ Directory:  codex
  │ Model:      gpt-5:medium
  │ Duration:   1h 15m
  │ Branch:      fcoury/session-picker
  │
  │ Conversation:
↓ more
