codex-rs/tui/src/snapshots/codex_tui__resume_picker__tests__resume_picker_indexed_status_messages.snap
---
source: tui/src/resume_picker.rs
expression: "format!(\"{empty}\\n{}\", search_line(&state, 80))"
---
No indexed sessions yet · refreshing…
Could not refresh sessions; showing indexed results
