codex-rs/tui/src/snapshots/codex_tui__resume_picker__tests__resume_picker_metadata_narrow.snap
---
source: tui/src/resume_picker.rs
expression: "render_dense_row_snapshot(true, None, 48)"
---
❯ 15m ago   1h... co... grok-4.6:high   Prop...
                                        session
                                        picker…
