codex-rs/tui/src/snapshots/codex_tui__resume_picker__tests__resume_picker_metadata_normal.snap
---
source: tui/src/resume_picker.rs
expression: "render_dense_row_snapshot(true, None, 80)"
---
❯ 15m ago     codex-rs        openai / gpt-5 · medium             1h 15m  Pr...
                                                                          e
                                                                          se...
